@@ -55,20 +55,6 @@ public class GuiSequencer extends GenericGuiContainer<SequencerTileEntity, Gener
         ImageChoiceLabel choiceLabel = window.findChild("endchoice");
         choiceLabel.setCurrentChoice(tileEntity.getEndState() ? 1 : 0);
 
-//        TextField countField = window.findChild("stepcount");
-//        int count = tileEntity.getStepCount();
-//        if (count < 1 || count > 64) {
-//            count = 64;
-//        }
-//        countField.text(String.valueOf(count));
-
-//        TextField speedField = window.findChild("delay");
-//        int delay = tileEntity.getDelay();
-//        if (delay <= 0) {
-//            delay = 1;
-//        }
-//        speedField.text(String.valueOf(delay));
-
         for (int row = 0; row < 8; row++) {
             for (int col = 0; col < 8; col++) {
                 final int bit = row * 8 + col;
