@@ -1,6 +1,7 @@
 Upcoming:
 - Fixed a few bugs in the matter booster en destination analyzer
 - Made the timer less annoying to edit
+- The tablet also works on the creative screen now
 
 1.16-3.1.3:
 - Fixed the peaceful module in the environmental controller
